# service-helpers

./: .gitignore  Pipfile  README.md  example_account_file.csv  pyproject.toml
compare/: compare.py
refresh/: refresh.py
service_helpers/: chromedriver.py  cli.py  compare.py  refresh.py
