[tool.poetry]
name = "service-helpers"
version = "0.0.0"
description = "A collection of helper scripts for the Service Team"
authors = ["Chris Pressland <mail@cpressland.io>"]
readme = "README.md"
packages = [{include = "service_helpers"}]

[tool.poetry.scripts]
helper = "service_helpers.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.6.0"
click = "^8.1.3"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
Flake8-pyproject = "^1.2.0"
isort = "^5.10.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
